--- a/authentication/package.json
+++ b/authentication/package.json
@@ -25,6 +25,7 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.1.0",
+    "@adonisjs/validator": "^5.1.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {},
