--- a/backend/package.json
+++ b/backend/package.json
@@ -24,13 +24,11 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
-    "@adonisjs/mail": "^3.1.0",
-    "@adonisjs/vow": "^1.0.17",
+    "@adonisjs/session": "^1.1.0",
+    "@adonisjs/validator": "^5.1.0",
     "mysql": "^2.18.1"
   },
-  "devDependencies": {
-    "sqlite3": "^5.0.2"
-  },
+  "devDependencies": {},
   "autoload": {
     "App": "./app"
   }
